# echo-service

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  Dockerfile  echo-client.cc  echo_client.cc
proto/: CMakeLists.txt  echo_service.proto
server/: CMakeLists.txt  Dockerfile  echo-deployment.yaml  echo-server.cc
src/: CMakeLists.txt  GenerateProtos.cmake  echo_client.cc  echo_server.cc  echo_service.proto
